Creación views y url de Quienes Somos para Python

--- a/static/styles/quienes_somos.css
+++ b/static/styles/quienes_somos.css
@@ -7,7 +7,7 @@
 
 .introduction-decoration {
     position: absolute;
-    background: url('../assets/img/globo_trazado.png');
+    background: url('../images/globo_trazado.png');
     height: 250px;
     width: 300px;
     bottom: 0;
