--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,13 @@
         {% endblock content %}
     </main>
 
-    {% include "components/footer.html" %}    
+    {% include "components/footer.html" %} 
+    
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>  
 
     <script src="{% static 'js/main.js' %}"></script>
     <script src="https://kit.fontawesome.com/534658d6ab.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
