--- a/templates/productos.html
+++ b/templates/productos.html
@@ -9,24 +9,7 @@
 </section> -->
 
 <section class="products-container">
-    <div class="product-card">
-        <div class="product-card__img-container">
-            <img src="assets/img/productos/trapeadora.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
-        </div>
-        <div class="product-card__info-container">
-            <h3 class="product-card__title">Aspiradora Trapeadora Robot Atma</h3>
-            <div class="product-card__purchase">
-                <p class="product-card__price">$ 198.599</p>
-                <button class="product-card__cart-button"></button>
-            </div>
-        </div>
-        <a href="#" class="product-card__detail-button">
-            <span class="circle">
-                <span class="icon arrow"></span>
-            </span>
-            <span class="button-text">Ver detalle</span>
-        </a>
-    </div>
+    {% include "components/product-card.html" %}
 </section>
 
 {% endblock content %} <!-- Hay que cerrar el bloque, si hay varios hay que especificar cuál se está cerrando -->
