--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -11,16 +11,16 @@
 
         <ul id="main-menu" class="footer-menu">
             <li class="main-menu__item">
-                <a href="index.html" class="main-menu__link content">Inicio</a>
+                <a href="{% url 'inicio' %}" class="main-menu__link content">Inicio</a>
             </li>
             <li class="main-menu__item">
-                <a href="quienes_somos.html" class="main-menu__link content">Quienes somos</a>
+                <a href="{% url 'quienes_somos' %}" class="main-menu__link content">Quienes somos</a>
             </li>
             <li class="main-menu__item">
-                <a href="lista_productos.html" class="main-menu__link content">Productos</a>
+                <a href="{% url 'lista_productos' %}" class="main-menu__link content">Productos</a>
             </li>
             <li class="main-menu__item">
-                <a href="contacto.html" class="main-menu__link content">Contacto</a>
+                <a href="{% url 'contacto' %}" class="main-menu__link content">Contacto</a>
             </li>
         </ul>
     </div>
