Protege ruta administrador/

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -96,6 +96,10 @@ button {
     position: relative;    
 }
 
+.main-menu__link.link-authentication {
+    font-style: italic;
+}
+
 .main-menu--show {
     display: flex;
     flex-direction: column;
