--- a/templates/components/product-admin.html
+++ b/templates/components/product-admin.html
@@ -2,12 +2,12 @@
 <div class="product-card">
     <div class="product-details">
         <div class="product-img--container">
-            <img src="{% static 'images/productos/camara.jpg' %}" alt="Producto" class="product-img">
+            <img src="{{ product.image.url }}" alt="{{ Producto }}" class="product-img">
         </div>
         <div class="product-info">
-            <h2 class="product-name">Cámara Inteligente Wi-Fi De Vigilancia 360º</h2>
-            <p class="product-price">$147500.00</p>
-            <p class="product-stock">Stock: 25</p>
+            <h2 class="product-name">{{ product.title }}</h2>
+            <p class="product-price">${{ product.price }}</p>
+            <p class="product-stock">Stock: {{ product.stock }}</p>
         </div>
     </div>
     <div class="product-buttons">
