--- a/templates/administrador.html
+++ b/templates/administrador.html
@@ -41,14 +41,14 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form method='POST'>
+        <form method='POST' enctype="multipart/form-data">
             {% csrf_token %}
             {{ form }}
+            <div class="modal-footer mx-auto">
+              <button type="button" class="btn btn-outline-info btn-lg" for="btncheck1" data-bs-dismiss="modal">Cancelar</button>
+              <button type="submit" class="btn btn-outline-info btn-lg" for="btncheck1">Agregar</button>
+            </div>
         </form>
-      </div>
-      <div class="modal-footer mx-auto">
-        <button type="button" class="btn btn-outline-info btn-lg" for="btncheck1" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-outline-info btn-lg" for="btncheck1">Agregar</button>
       </div>
     </div>
   </div>
