--- a/templates/productos.html
+++ b/templates/productos.html
@@ -7,11 +7,14 @@
 <!-- <section class="top-bar">
     Para luego agregar una barra de búsqueda de productos.
 </section> -->
-
-<section class="products-container">
-    {% for product in products %}
-        {% include "components/product-card.html" with product=product %}
-    {% endfor %}
-</section>
+{% if products %}
+    <section class="products-container">
+        {% for product in products %}
+            {% include "components/product-card.html" with product=product %}
+        {% endfor %}
+    </section>
+{% else %}
+    {% include "components/no-products.html" %}
+{% endif %}
 
 {% endblock content %} <!-- Hay que cerrar el bloque, si hay varios hay que especificar cuál se está cerrando -->
