--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -21,6 +21,10 @@ button {
     cursor: pointer;
 }
 
+main {
+    min-height: 50vh;
+}
+
 /*  ----------- FIN DE RESETS -----------  */
 
 :root {
@@ -189,6 +193,23 @@ ul {
 .message.error {
     color: #842029;
     background-color: #f8d7da;
+}
+
+.no-products {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+}
+
+.no-products-p {
+    text-align: center;
+    font-size: 1.7rem;
+}
+
+.no-products-img {
+    width: 280px;
 }
 
 /* -------------- FOOTER ------------------*/
