--- a/templates/components/product-admin.html
+++ b/templates/components/product-admin.html
@@ -12,6 +12,30 @@
     </div>
     <div class="product-buttons">
         <button class="btnDefault editBtn" type="button">Editar</button>
-        <a href="{% url 'eliminar_producto' id=product.id %}" class="btnDefault deleteBtn" type="button">Eliminar</a>
+
+        <button type="button" class="btn btn-primary btnDefault deleteBtn" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+        Eliminar
+        </button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ¿Esta seguro que quiere eliminar este producto?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary btnDefault" data-bs-dismiss="modal">No</button>
+        
+        <a href="{% url 'eliminar_producto' id=product.id %}" class="btnDefault deleteBtn" type="button">Si</a>
+      </div>
+    </div>
+  </div>
+</div>
+        
     </div>
 </div>
