--- a/static/styles/administrador.css
+++ b/static/styles/administrador.css
@@ -19,7 +19,7 @@
     padding: 12px 16px;
     border-radius: 8px;
     font-size: 1.6rem;
-    min-width: 100px;    
+    min-width: 90px;    
     border: none;
     color: white;
 }
@@ -40,8 +40,11 @@
     margin: 16px 0;
 }
 
-.product-card {
+.product-card, .product-details {
     display: flex;
+}
+
+.product-card {
     justify-content: space-between;
     flex-wrap: wrap;
     background-color: #FFFFFF;
@@ -53,7 +56,6 @@
 }
 
 .product-details {
-    display: flex;
     align-items: center;
     gap: 32px;
 }
@@ -94,6 +96,9 @@
     background: #cb2121;
     box-shadow: 1px 1px 8px #c3c3c3;
 } 
+.deleteBtn:hover {
+    background: #cb2121;
+}
 
 .modal-content {
     padding: 8px;
@@ -101,6 +106,11 @@
 
 .modal-title {
     font-size: 2rem;
+}
+
+.modal-advertise {
+    font-size: 1.8rem;
+    text-align: center;
 }
 
 label {
